<resources>
    <string name="welcome">Welcome to the Minesweeper</string>
    <string name="easy">Piece of Cake</string>
    <string name="medium">Let\'s Rock</string>
    <string name="hard">Damn, I am Good</string>
    <string name="play">Play</string>
    <string name="select">Please select a difficulty level</string>


    <string name="app_name">Minesweeper</string>
    <string name="bombCount">0</string>
    <string name="help">Help</string>
    <string name="clock">0</string>
    <string name="txt_win">You won!!!!</string>
    <string name="txt_lose">You lose!!!!</string>
    <string name="txt_fail">A problem generating the game has ocurred</string>
    <string name="urlHelp">https://drive.google.com/file/d/1qV__SLP75wzdOsABFoHNdV9Sa0XurANB/view?usp=sharing</string>


    <string name="score">SCORE:</string>
    <string name="points">POINTS</string>
    <string name="historic">HISTORIC</string>
    <string name="tryAgain">TRY AGAIN</string>
    <string name="bestScore">BEST SCORE</string>
    <string name="urlRanking">https://www.xataka.com/videojuegos/el-legendario-buscaminas-sigue-muy-vivo-y-hay-un-campeonato-del-mundo-que-lo-demuestra</string>
    <string name="txt_intent_app">Choose App</string>
    <string name="txt_nav">No browser available</string>
    <string name="txt_no_score">No avaliable score</string>
    <string name="title_activity_video_tutorial">VideoTutorial</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>