<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="336dp"
        android:layout_height="157dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="38dp"
        android:fontFamily="@font/aldrich"
        android:lineSpacingExtra="20sp"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="336dp"
        android:layout_height="72dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="37dp"
        android:fontFamily="@font/aldrich"
        android:lineSpacingExtra="20sp"
        android:text="@string/select"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <RadioGroup
        android:id="@+id/rdbGroup"
        android:layout_width="354dp"
        android:layout_height="256dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="87dp"
        android:background="#817C7C"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/playBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <RadioButton
            android:id="@+id/rdbEasy"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:button="@null"
            android:fontFamily="@font/aldrich"
            android:text="@string/easy"
            android:textAlignment="center"
            android:textColor="#44FF00"

            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/rdbMedium"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:button="@null"
            android:fontFamily="@font/aldrich"
            android:text="@string/medium"
            android:textAlignment="center"
            android:textColor="#FFF200"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/rdbHard"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:button="@null"
            android:fontFamily="@font/aldrich"
            android:text="@string/hard"
            android:textAlignment="center"
            android:textColor="#FF0000"
            android:textSize="24sp" />
    </RadioGroup>

    <Button
        android:id="@+id/playBtn"
        android:layout_width="157dp"
        android:layout_height="52dp"
        android:layout_marginStart="127dp"
        android:layout_marginEnd="127dp"
        android:layout_marginBottom="35dp"
        android:background="@android:color/white"
        android:fontFamily="sans-serif-medium"
        android:text="@string/play"
        android:textColor="#039BE5"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>